# photo_search

./: .gitignore  README.md  main.py  pyproject.toml
photo_search/: api.py  config.py  embedding.py  indexer.py  search.py  vector_store.py
scripts/: explore_clip.py
ui/: app.py
