[project]
name = "photo-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "torch>=2.12.0",
    "transformers<5",
]
